빅쿼리 헨들러를 사용한 쿼리 로딩

--- a/Map Visualization/FoliumGeo.ipynb
+++ b/Map Visualization/FoliumGeo.ipynb
@@ -5273,17 +5273,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "7ac9615c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sigungu['x'] = ''\n",
-    "sigungu['y'] = ''"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 37,
    "id": "c4c4592e",
    "metadata": {},
@@ -5446,6 +5435,9 @@
     }
    ],
    "source": [
+    "sigungu['x'] = ''\n",
+    "sigungu['y'] = ''\n",
+    "\n",
     "for i in range(0,len(sigungu)):\n",
     "    sigungu['x'][i] = lst[i][0]\n",
     "    sigungu['y'][i] = lst[i][1]\n",
