--- a/거래가격 추론/부산 부산진구.ipynb
+++ b/거래가격 추론/부산 부산진구.ipynb
@@ -2,8 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "29a87b8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as ps\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb2efa92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [24900, ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9331b0b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -25,7 +47,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.10.4"
   },
   "toc": {
    "base_numbering": 1,
