유사단지 클러스터

--- a/반경내 유사 매물 추출 프로젝트/반경내 유사매물 추출 로직.ipynb
+++ b/반경내 유사 매물 추출 프로젝트/반경내 유사매물 추출 로직.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "4da02da0",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
     "                   on A.pnuCode = B.pnuCode \n",
     "                   \n",
     ")SELECT tmp.*,\n",
-    "        ST_Distance_Sphere(POINT({lon},{lat}),geom) AS distance\n",
+    "         \n",
     "FROM tmp\n",
     "WHERE ST_Distance_Sphere(POINT({lon},{lat}), geom) <={radius}\n",
     "ORDER BY distance ASC;\n",
@@ -210,20 +210,80 @@
     "df= db.read_table(sql)\n",
     "\n",
     "\n",
-    "# 반경내 지하철역 정보 테이블\n",
-    "sql2 = f\"\"\"\n",
-    "SELECT * , \n",
-    "       ST_Distance_Sphere(POINT({lon},{lat}),POINT(lon,lat)) AS distance\n",
-    "FROM aide.railway_station_info\n",
-    "WHERE ST_Distance_Sphere(POINT({lon},{lat}),POINT(lon,lat)) <= {radius}\n",
-    "ORDER BY distance ASC;\n",
-    "\"\"\"\n",
-    "train = db.read_table(sql2)"
+    "# # 반경내 지하철역 정보 테이블\n",
+    "# sql2 = f\"\"\"\n",
+    "# SELECT * , \n",
+    "#        ST_Distance_Sphere(POINT({lon},{lat}),POINT(lon,lat)) AS distance\n",
+    "# FROM aide.railway_station_info\n",
+    "# WHERE ST_Distance_Sphere(POINT({lon},{lat}),POINT(lon,lat)) <= {radius}\n",
+    "# ORDER BY distance ASC;\n",
+    "# \"\"\"\n",
+    "# train = db.read_table(sql2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
+   "id": "bfb5f970",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "WITH tmp AS (  SELECT A.pnuCode, \n",
+      "                      addressJibeon, \n",
+      "                      addressRoad, \n",
+      "                      danjiName, \n",
+      "                      usePermissionDate, \n",
+      "                      B.contractYear, \n",
+      "                      B.contractMonth, \n",
+      "                      B.jeonseJeonyongUnitPriceAverage, \n",
+      "                      buildingAreaPerLandArea, \n",
+      "                      floorAreaRatio, \n",
+      "                      mainPurposeCodeName, \n",
+      "                      otherPurpose, \n",
+      "                      saedaeCount, \n",
+      "                      totalParkingLotCount, \n",
+      "                      lon, \n",
+      "                      lat, \n",
+      "                      coord, \n",
+      "                      geom\n",
+      "               FROM aide.apartment_danji_information AS A\n",
+      "               JOIN (SELECT T1.*\n",
+      "                     FROM(\n",
+      "                         SELECT pnuCode,\n",
+      "                                contractYear,\n",
+      "                                contractMonth,\n",
+      "                                supplyArea,\n",
+      "                                tradingJeonyongUnitPriceAverage,\n",
+      "                                jeonseJeonyongUnitPriceAverage,\n",
+      "                                wolseJeonyongUnitPriceAverage,\n",
+      "                                ROW_NUMBER() OVER(PARTITION BY pnuCode  ORDER BY contractYear DESC, contractMonth DESC) AS num\n",
+      "                         FROM aide.apartment_danji_monthly_area_price\n",
+      "                         WHERE pnuCode LIKE '11%' AND jeonseJeonyongUnitPriceAverage is not null\n",
+      "                        ) AS T1\n",
+      "                     WHERE T1.num = 1 \n",
+      "                   ) AS B\n",
+      "                   on A.pnuCode = B.pnuCode \n",
+      "                   \n",
+      ")SELECT tmp.*,\n",
+      "        ST_Distance_Sphere(POINT(127.011034636758,37.5063518132638),geom) AS distance\n",
+      "FROM tmp\n",
+      "WHERE ST_Distance_Sphere(POINT(127.011034636758,37.5063518132638), geom) <=1000\n",
+      "ORDER BY distance ASC;\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "de798d95",
    "metadata": {},
    "outputs": [],
