--- a/부동산 보고서 프로젝트/report.ipynb
+++ b/부동산 보고서 프로젝트/report.ipynb
@@ -74,6 +74,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e018db00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sql =f\"\"\"\n",
+    "select *, ST_DISTANCE(st_geogpoint({lon},{lat}), st_geogpoint(longitude, latitude),FALSE) AS distance\n",
+    "from `aidepartners.aide.complex_danji_information`\n",
+    "-- 무조건 해당아파트가 distance가 가장 가깝지않음\n",
+    "WHERE ST_DISTANCE(st_geogpoint({lon},{lat}), st_geogpoint(longitude, latitude),FALSE) <=2000 AND realEstateTypeCode = 'APT'\n",
+    "ORDER BY distance\n",
+    "\"\"\"\n",
+    "df = BH.read_table(sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4532aa27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sedae, distace, builtYear = df[['totalHouseholdCount','distance','useApproveYear']].iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "136777f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3410"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def scoreDistance(x):\n",
+    "    if x <=500:\n",
+    "        x = 7\n",
+    "    elif x > 500 AND x<=1000:\n",
+    "        x = 5\n",
+    "    elif x >1000 AND x <=2000:\n",
+    "        x = 3\n",
+    "    else:\n",
+    "        x = 1\n",
+    "def scoreSedae(x):\n",
+    "    if x - sedae"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b0c5883",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "2654cecd",
    "metadata": {},
@@ -100,66 +166,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "12da9152",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'documents': [{'address': {'address_name': '서울 강서구 마곡동 743-4',\n",
-       "    'b_code': '1150010500',\n",
-       "    'h_code': '1150063000',\n",
-       "    'main_address_no': '743',\n",
-       "    'mountain_yn': 'N',\n",
-       "    'region_1depth_name': '서울',\n",
-       "    'region_2depth_name': '강서구',\n",
-       "    'region_3depth_h_name': '방화1동',\n",
-       "    'region_3depth_name': '마곡동',\n",
-       "    'sub_address_no': '4',\n",
-       "    'x': '126.823376663134',\n",
-       "    'y': '37.5648812125749'},\n",
-       "   'address_name': '서울 강서구 마곡동 743-4',\n",
-       "   'address_type': 'REGION_ADDR',\n",
-       "   'road_address': {'address_name': '서울 강서구 마곡서로 133',\n",
-       "    'building_name': '마곡엠밸리7단지',\n",
-       "    'main_building_no': '133',\n",
-       "    'region_1depth_name': '서울',\n",
-       "    'region_2depth_name': '강서구',\n",
-       "    'region_3depth_name': '마곡동',\n",
-       "    'road_name': '마곡서로',\n",
-       "    'sub_building_no': '',\n",
-       "    'underground_yn': 'N',\n",
-       "    'x': '126.823838667719',\n",
-       "    'y': '37.5645561030039',\n",
-       "    'zone_no': '07798'},\n",
-       "   'x': '126.823376663134',\n",
-       "   'y': '37.5648812125749'}],\n",
-       " 'meta': {'is_end': True, 'pageable_count': 1, 'total_count': 1}}"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "docs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "id": "5f2521f9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "docs = kakao.search_address('서울시 강서구 마곡동 743-4')"
+    "docs = kakao.search_address('반포동 20-43')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "id": "6cbeac57",
    "metadata": {},
    "outputs": [],
